# ApiSisBro

./: .dockerignore  .env  .gitignore  README.md  alembic.ini  base.md  compose.yaml  dockerfile  env.example  pyproject.toml
src/apisisbro/: app.py
src/apisisbro/core/: __init__.py  auth.py  database.py  settings.py
src/apisisbro/migrations/: env.py
src/apisisbro/migrations/versions/: 116b51c544e8_create_users_table.py  1dd71988e894_add_supabase_id_and_nullable_password.py  6fe77fc77484_relaciona_usuario_produtos.py  b153f19f3474_adiciona_produtos_ao_banco_de_dados.py  d1b7b8fd992e_relaciona_usuario_produtos_correçao.py
src/apisisbro/models/: models.py
src/apisisbro/repository/: base_repository.py  product_repository.py
src/apisisbro/routers/: auth_router.py  product_router.py
src/apisisbro/schemas/: schema.py
src/apisisbro/services/: auth_service.py  product_service.py  storage_service.py  supabase_client.py
